# OpenAdapt

./: .gitignore  README.md  pyproject.toml  requirements.txt
openadapt/: config.defaults.json  config.py  element_description.py  record.py
openadapt/db/: __init__.py  dynamo.py
recordingAgent/: config.py  record.py  utils.py
tests/openadapt/: test_dynamo.py
