[tool.poetry]
name = "recordingAgent"
version = "0.1.0"
description = "Simple event recorder"
authors = ["OpenAdapt"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pynput = "^1.7.6"
mss = "^6.1.0"
Pillow = "^10.4.0"
requests = "^2.31.0"
boto3 = "^1.34.81"
pygetwindow = "^0.0.9"

[build-system]
requires = ["poetry-core>=1.6.1"]
build-backend = "poetry.core.masonry.api"
